<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/imagen">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="300sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/backgroundTint"
                android:drawableLeft="@drawable/contrasena"
                android:hint="Ingrese su contraseña"
                android:inputType="textPassword"
                android:textColorHint="@color/colorText" />


        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#635F5F"
        android:alpha="0.6"/>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:layout_marginRight="25sp"
        android:layout_weight="1"
        android:fontFamily="@font/alegreya_sans"
        android:gravity="center"
        android:text="@string/NameApp"
        android:textColor="@color/colorText"
        android:textSize="35sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130sp"
        android:gravity="center"
        android:text="@string/frase"
        android:textColor="@color/colorText"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_weight="1"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/backgroundTint"
            android:drawableLeft="@drawable/usuario"
            android:hint="Ingrese nombre de usuario"
            android:textColorHint="@color/colorText"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonIniciarSesion"
        android:layout_width="300sp"
        android:layout_height="45sp"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="440sp"
        android:layout_marginRight="50sp"
        android:background="@drawable/botoniniciar"
        android:onClick="Validacion"
        android:text="@string/IniciarSesion"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />

    <Button
        android:id="@+id/Registrarse"
        android:layout_width="300sp"
        android:layout_height="45sp"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="500sp"
        android:layout_marginRight="50sp"
        android:background="@drawable/botonregistrarse"
        android:onClick="Registro"
        android:text="@string/Registrarse"
        android:textColor="#FFFFFF"
        android:textSize="26sp" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380sp"
        android:layout_weight="1"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:onClick="RestablecerContraseña"
        android:text="@string/clave"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="570sp"
        android:layout_marginLeft="120sp"
        app:srcCompat="@drawable/facebookd" />
    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="570sp"
        android:layout_marginLeft="200sp"
        app:srcCompat="@drawable/twitterkd" />
</RelativeLayout>